force-app/main/default/objects/Receipt__c/fields/Check_Transaction_Nmber__c.field-meta.xml
<CustomField>
    <fullName>Check_Transaction_Nmber__c</fullName>
    <label>Cheque no / Transaction Number</label>
    <length>220</length>
    <type>Text</type>
</CustomField>