force-app/main/default/objects/Receipt__c/fields/Drawn_On__c.field-meta.xml
<CustomField>
    <fullName>Drawn_On__c</fullName>
    <label>Drawn On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>