force-app/main/default/objects/Receipt__c/fields/Receipt_Name__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Name__c</fullName>
    <label>Receipt Name</label>
    <length>220</length>
    <type>Text</type>
</CustomField>