force-app/main/default/objects/Receipt__c/fields/Receipt_No__c.field-meta.xml
<CustomField>
    <fullName>Receipt_No__c</fullName>
    <label>Receipt No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>