force-app/main/default/objects/Receipt__c/fields/Total_Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Received_Amount__c</fullName>
    <label>Total Received Amount</label>
    <summarizedField>Receipt_Line_Item__c.Received_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Receipt_Line_Item__c.Approval_Status_Picklist__c</field>
        <operation>notEqual</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Receipt_Line_Item__c.Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>